refactor(security): Update SecurityConfig to integrate GlobalRateLimitingFilter and enhance authentication flow